# pjecz-tres-de-tres-cliente-flask

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
lib/: hashids.py  safe_string.py
tres_de_tres_cliente_flask/: app.py  extensions.py
tres_de_tres_cliente_flask/blueprints/avisos/: views.py
tres_de_tres_cliente_flask/blueprints/avisos/templates/avisos/: aviso.jinja2
tres_de_tres_cliente_flask/blueprints/resultados/: views.py
tres_de_tres_cliente_flask/blueprints/resultados/templates/resultados/: fallido.jinja2  registrado.jinja2
tres_de_tres_cliente_flask/blueprints/sistemas/: views.py
tres_de_tres_cliente_flask/blueprints/sistemas/templates/sistemas/: 400.jinja2  403.jinja2  404.jinja2  500.jinja2  start.jinja2
tres_de_tres_cliente_flask/blueprints/solicitudes/: forms.py  views.py
tres_de_tres_cliente_flask/blueprints/solicitudes/templates/solicitudes/: solicitud.jinja2
tres_de_tres_cliente_flask/static/css/: styles.css
tres_de_tres_cliente_flask/templates/layouts/: app.jinja2  base.jinja2
tres_de_tres_cliente_flask/templates/macros/: form.jinja2
