[tool.poetry]
name = "tres-de-tres-cliente-flask"
version = "0.1.0"
description = "Emisión de constancias a las personas candidatas del Proceso Electoral 2023"
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-WTF = "^1.1.1"
hashids = "^1.3.1"
Jinja2 = "^3.1.2"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
Unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
pylint = "^2.16.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256
